--- a/static/css/loader.css
+++ b/static/css/loader.css
@@ -133,5 +133,7 @@ body {
 }
 .ggslot {
   text-align: center;
-  /* background-color: black; */
 }
+/* .adsbygoogle {
+  background-color: black;
+} */
